--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,29 @@
 @import "tailwindcss";
+
+@layer base {
+    body {
+        background: #101828;
+    };
+
+    &::-webkit-scrollbar {
+    display: none;
+  }
+
+
+::-webkit-scrollbar {
+    display: none;
+  }
+  .scroll-hide::-webkit-scrollbar {
+    display: none;
+  }
+
+  .scroll-hide {
+    overflow: hidden;
+    -ms-overflow-style: none; 
+    scrollbar-width: none; 
+  }
+}
+
+@layer utilities {
+
+}
